--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     I am a fan of Cycling, Photography and Technology.
     I’m also interested in Fitness and Coffee.</p>
   <hr>
-  <h3>Work Experince</h3>
+  <h3>Work Experience</h3>
   <ul>
     <li>Trainee at Webyfy Infotech Pvt Ltd</li>
     <li>Mehndhika App Development</li>
