--- a/index.html
+++ b/index.html
@@ -4,15 +4,24 @@
 <head>
   <meta charset="utf-8">
   <title>SanojMASK</title>
+
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-  <img src="images/sanoj.png" alt="sanoj profile picture">
-  <h1>Sanoj M A</h1>
-  <p><em>Web Developer at <strong><a href="https://www.encreators.com/" target="_blank">Encreators.com</a></strong></em></p>
-  <p>I’m a student living in Thiruvananthapuram.
-    I am a fan of Cycling, Photography and Technology.
-    I’m also interested in Fitness and Coffee.</p>
+<table cellspacing="20">
+  <tr>
+    <td><img src="images/sanoj.png" alt="sanoj profile picture"></td>
+    <td><h1>Sanoj M A</h1>
+    <p><em>Web Developer at <strong><a href="https://www.encreators.com/" target="_blank"style="color:#75c92b">Encreators.com</a></strong></em></p>
+    <p>I’m a student living in Thiruvananthapuram.<br>
+      I am a fan of Cycling, Photography and Technology.<br>
+      I’m also interested in Fitness and Coffee.</p></td>
+  </tr>
+</table>
+
+
+
   <hr>
   <h3>Work Experience</h3>
   <ul>
@@ -71,6 +80,7 @@
   </table>
   <hr>
   <a href="hobbies.html" target="_blank">My Hobbies</a>
+  &nbsp;
   <a href="contact-me.html" target="_blank">Contact Me</a>
 </body>
 
